# xbox

./: LICENSE  README.md  stack.yaml  xbox.cabal
src/: Main.hs
src/Xbox/: Config.hs  FileSystem.hs  Library.hs  Playback.hs  Util.hs
